--- a/progettoFinale/package.json
+++ b/progettoFinale/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vanilla",
+  "name": "progettofinale",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -14,7 +14,6 @@
   },
   "dependencies": {
     "@types/bootstrap": "^5.2.10",
-    "bootstrap": "^5.3.3",
-    "node": "^20.18.0"
+    "bootstrap": "^5.3.3"
   }
 }
